@@ -5,11 +5,8 @@ import java.io.FilenameFilter;
 import java.io.IOException;
 import java.io.Writer;
 
-import org.bukkit.command.CommandSender;
-import org.jim.bukkit.audit.AuditPlugin;
-
 public class FileExecutor {
-	
+
 	public Writer logger;
 
 	public FileExecutor(File dir) {
@@ -27,36 +24,34 @@ public class FileExecutor {
 			}
 		}
 	}
-	//private CommandSender sender;
+
+	// private CommandSender sender;
 	public FileExecutor(Writer writer) {
 		this.logger = writer;
 	}
 
 	public void exec(File f) {
-	/*	if (!isLinux()) {
-			log("非linux环境...不运行脚本");
-			return;
-		}
-		*/
+		/*
+		 * if (!isLinux()) { log("非linux环境...不运行脚本"); return; }
+		 */
 		try {
 			Process p = null;
-			if(isWindows())
-				p= Runtime.getRuntime().exec(new String[]{
-						"cmd.exe","/C",f.getAbsolutePath().toString()
-				});
-			else if(isLinux())
-				p= Runtime.getRuntime().exec("sh " + f.getAbsolutePath());
-			if(p == null){
+			if (isWindows())
+				p = Runtime.getRuntime().exec(new String[] { "cmd.exe", "/C",
+						f.getAbsolutePath().toString() });
+			else if (isLinux())
+				p = Runtime.getRuntime().exec("sh " + f.getAbsolutePath());
+			if (p == null) {
 				log("不支持当前环境!");
 				return;
 			}
-			new ProcessWrapper(p){
+			new ProcessWrapper(p) {
 				public void log(String msg) {
 					FileExecutor.this.log(msg);
 				};
 			}.start();
 		} catch (IOException e) {
-			log("Error: "+e.getLocalizedMessage());
+			log("Error: " + e.getLocalizedMessage());
 			e.printStackTrace();
 		}
 	}
@@ -64,18 +59,19 @@ public class FileExecutor {
 	public boolean isLinux() {
 		return System.getProperty("os.name").toLowerCase().contains("linux");
 	}
-	
+
 	public boolean isWindows() {
 		return System.getProperty("os.name").toLowerCase().contains("windows");
 	}
-	private void log(String msg){
-		if(logger!=null){
+
+	private void log(String msg) {
+		if (logger != null) {
 			try {
-				logger.append(" >"+msg+"\n");
+				logger.append(" >" + msg + "\n");
 			} catch (IOException e) {
 				e.printStackTrace();
 			}
-			//sender.sendMessage(" >"+msg);
+			// sender.sendMessage(" >"+msg);
 		}
 	}
 
